# PwnedPW

./: .deepsource.toml  .drone.yml  .gitignore  Dockerfile  Pipfile  PwnedPW.py  README.md  pwned_pw.py  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  sonar-project.properties  test_PwnedPW.py  test_pwned_pw.py
.gitea/: CODEOWNERS
.gitea/workflows/: build_docker.yml  ci.yml  conventional_commit.yml  release.yml
.github/: dependabot.yml  renovate.json
.github/archive/: .deepsource.toml  requirements-dev.txt
.github/archive/workflows-disabled/: ci.yml
.github/workflows/: ci.yml  codeql-analysis.yml  lint.yml  merge-to-main.yml  pull-request.yml  release.yml  test.yml
app/: main.py
tests/: test_main.py  test_pwned_pw.py
