[tool.poetry]
name = "pwnedpw"
version = "0.1.0"
description = "Checks if your password has been leaked."
authors = ["Luke Tainton <luke@tainton.uk>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
coverage = "^7.2.5"
pylint = "^2.17.4"
pylint-exit = "^1.2.0"
pytest = "^7.3.1"
ruff = "^0.0.267"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
