[project]
name = "pwnedpw"
version = "0.0.0"
description = "Checks if your password has been leaked."
readme = "README.md"
authors = [
    {name = "Luke Tainton", email = "luke@tainton.uk"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "requests<3.0.0,>=2.32.3",
]

[dependency-groups]
dev = [
    "black<25.2.0,>=25.1.0",
    "coverage<8.0.0,>=7.6.10",
    "pylint<4.0.0,>=3.3.3",
    "pylint-exit<2.0.0,>=1.2.0",
    "pytest<9.0.0,>=8.3.4",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
